--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -348,7 +348,6 @@ nav li {
 
   .form-horizontal {
     text-align: left;
-    margin: 0 2em 0 2em;
   }
 
   .form-horizontal .form-group {
